--- a/src/scss/_start.scss
+++ b/src/scss/_start.scss
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100dvh;
+    width: 100%;
     padding: 40px 20px;
     background: radial-gradient(50% 50% at 50% 50%, #171616 0%, #000 100%);
 
