--- a/src/scss/_tabs.scss
+++ b/src/scss/_tabs.scss
@@ -45,6 +45,7 @@
     // .tabs__add
 
     &__add {
+        text-transform: none;
         column-gap: 4px;
         width: fit-content;
         padding: 10px 20px;
