--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -62,6 +62,8 @@
 
         &.disabled {
             opacity: 0.3;
+            user-select: none;
+            pointer-events: none
         }
     }
 
