--- a/src/scss/_start.scss
+++ b/src/scss/_start.scss
@@ -1,86 +1,140 @@
 .start {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100dvh;
-    width: 100%;
-    padding: 40px 20px;
-    background: radial-gradient(50% 50% at 50% 50%, #171616 0%, #000 100%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100dvh;
+  width: 100%;
+  padding: 40px 20px;
+  background: radial-gradient(50% 50% at 50% 50%, #171616 0%, #000 100%);
 
-    @media (max-width: $breakpoint480) {
-        background: #0d0c0c;
-    }
+  @media (max-width: $breakpoint480) {
+    background: #0d0c0c;
+  }
 }
 
 .start__inner {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 36px;
-    min-height: 100%;
-    max-width: 520px;
-    width: 100%;
-    margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  row-gap: 36px;
+  min-height: 100%;
+  max-width: 520px;
+  width: 100%;
+  margin: 0 auto;
 
-    @media (max-width: $breakpoint480) {
-        min-height: calc(100dvh - 80px);
-    }
+  @media (max-width: $breakpoint480) {
+    min-height: calc(100dvh - 80px);
+  }
 }
 
 .start__logo {
+  img {
+    max-width: 396px;
+    width: 100%;
+    height: auto;
+  }
+
+  @media (max-width: $breakpoint480) {
+    margin: auto 0;
+
     img {
-        max-width: 396px;
-        width: 100%;
-        height: auto;
+      max-width: 224px;
     }
-
-    @media (max-width: $breakpoint480) {
-        margin: auto 0;
-
-        img {
-            max-width: 224px;
-        }
-    }
+  }
 }
 
 .start__info {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
 
-    @media (max-width: $breakpoint1024) {
-        display: none;
-    }
+  @media (max-width: $breakpoint1024) {
+    display: none;
+  }
 }
 
 .start__title {}
 
 .start__subtitle {
-    font-size: 16px;
-    text-align: center;
-    color: var(--white);
+  font-size: 16px;
+  text-align: center;
+  color: var(--white);
 }
 
 .start__btns {
-    display: flex;
-    flex-direction: column;
-    row-gap: 20px;
-    margin-top: 24px;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+  // margin-top: 24px;
+  width: 100%;
 
-    @media (max-width: $breakpoint480) {
-        margin-top: auto;
-    }
+  @media (max-width: $breakpoint480) {
+    margin-top: auto;
+  }
 }
 
 .start__btn {
+  max-width: 354px;
+  width: 100%;
+  margin: 0 auto;
+
+  @media (max-width: $breakpoint480) {
+    max-width: 100%;
+  }
+}
+
+.start {
+
+  &__footer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    width: 100%;
+  }
+
+  // .start__inputs
+
+  &__inputs {
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
     max-width: 354px;
     width: 100%;
     margin: 0 auto;
+  }
 
-    @media (max-width: $breakpoint480) {
-        max-width: 100%;
+  // .start__input
+
+  &__input {
+    padding: 18px 24px;
+    background-color: transparent;
+    outline: transparent;
+    border: 1px solid #a1a1a1;
+    border-radius: 4px;
+    font-family: var(--second-family);
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--white);
+    transition: border 0.2s linear;
+
+    &::placeholder {
+      font-family: var(--second-family);
+      font-weight: 400;
+      font-size: 14px;
+      color: #a1a1a1;
     }
+
+    @media (hover:hover) {
+      &:hover {
+        border-color: var(--primary);
+      }
+    }
+
+    &::focus,
+    &::active {
+      border-color: var(--primary);
+    }
+  }
 }
